# knots

./: CMakeLists.txt  README.md
include/knots/: match.h  search.h  utils.h
src/: match.c  search.c  utils.c
tests/: CMakeLists.txt  search.c  utils.c
